[project]
name = "cesium-ion-api-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominik Melnarowicz", email = "payp8@protonmail.com"},
]
dependencies = [
    "pydantic>=1.10.8",
    "aiohttp>=3.8.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.2",
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
ignore = ['./tests/*']

[tool.ruff]
ignore = ["E501"]
